ingress-corpapps.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-sticky-sessions-corpapps
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "cookie-smartconcil"
    nginx.ingress.kubernetes.io/session-cookie-expires: "2800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "2800"
spec:
  ingressClassName: nginx
  rules:
  - host: corporateapps.tigo.com.gt
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: echo
            port: 
              number: 80
