ingress-sticky-sessions.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-sticky-sessions
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  rules:
  - host: stickyingress.example.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: echo
            port: 
              number: 80
