ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
spec:
  rules:
  - host: ingress.example.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: echo
            port: 
              number: 80
